--- a/package.json
+++ b/package.json
@@ -5,18 +5,24 @@
   "author": "8miricd",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "cross-env NODE_ENV=development nodemon server/local.js --watch server",
     "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node server/index.js",
+    "start": "cross-env NODE_ENV=production node server/local.js",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "sls": "sls",
+    "sls:deploy": "sls deploy",
+    "deploy": "cross-env NODE_ENV=production ENDPOINT_ENV=api_gw run-s build sls:deploy",
+    "delete": "sls remove"
   },
   "dependencies": {
+    "@nuxtjs/dotenv": "^1.3.0",
+    "@nuxtjs/axios": "^5.3.6",
+    "aws-serverless-express": "^3.3.6",
     "cross-env": "^5.2.0",
-    "nuxt": "^2.4.0",
     "express": "^4.16.4",
-    "@nuxtjs/axios": "^5.3.6"
+    "nuxt": "^2.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
@@ -34,6 +40,8 @@
     "eslint-plugin-vue": "^5.2.2",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
-    "prettier": "^1.16.4"
+    "prettier": "^1.16.4",
+    "npm-run-all": "^4.1.3",
+    "serverless": "^1.40.0"
   }
 }
